--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.55.1",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.19.17",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^8.49.0",
     "jest": "^29.7.0",
-    "jest-html-reporters": "^3.1.5",
+    "jest-html-reporters": "^3.1.7",
     "jest-junit": "^16.0.0",
     "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
