--- a/ci.yml
+++ b/ci.yml
@@ -1,13 +1,13 @@
 name: OpenWeatherMap API Tests
 
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
-  schedule:
-    # Run tests daily at 6 AM UTC
-    - cron: '0 6 * * *'
+# on:
+#   push:
+#     branches: [ main, develop ]
+#   pull_request:
+#     branches: [ main ]
+#   schedule:
+#     # Run tests daily at 6 AM UTC
+#     - cron: '0 6 * * *'
 
 jobs:
   test:
