--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  schedule:
-    # Run tests daily at 6 AM UTC
-    - cron: '0 6 * * *'
+  # schedule:
+  #   # Run tests daily at 6 AM UTC
+  #   - cron: '0 6 * * *'
 
 jobs:
   test:
